# Coloricious

./: README.md  coloricious.c  meson.build
src/: colors.c  colors.h  main.c  options.c  options.h  output.c  output.h
